--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -90,7 +90,7 @@ blockquote {
 	align-items: baseline;
 	padding-bottom: 50px;
 	@media screen and (max-width: $br) {
-		display: block;
+		display: block flex;
 	}
 	h1 {
 		font-size: 1.5em;
